[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Enemies/Minotaur.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemies/minotaur-Sheet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56.3321, 104.277 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 107.053, 107.316 )

[sub_resource type="Animation" id=3]
resource_name = "Death"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 33, 34, 35, 36, 37, 38, 39, 40, 41, 41, 41 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Swing/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ProgressBar:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Moving"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Swing"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19, 20, 20, 21, 22, 23, 24, 25, 26 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Swing/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 81.8673, 112.89 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0784314, 0.862745, 0.192157, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.858824, 0.0352941, 0.0352941, 1 )

[node name="Minotaur" type="KinematicBody2D"]
position = Vector2( 0.330544, 3.08512 )
scale = Vector2( 0.25, 0.25 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 55.4934, 71.2745 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 54.6503, 72.0946 )
shape = SubResource( 2 )

[node name="Cliff" type="RayCast2D" parent="."]
position = Vector2( 52.795, 135.494 )
enabled = true
collision_mask = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Moving = SubResource( 5 )
anims/Swing = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )
vframes = 7
hframes = 6
frame = 33

[node name="Swing" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Swing"]
position = Vector2( -143.133, 77.6691 )
shape = SubResource( 7 )
disabled = true

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -39.7272
margin_top = -38.0
margin_right = 152.273
margin_bottom = -16.0
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
max_value = 4000.0
value = 4000.0
percent_visible = false
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Swing" to="." method="_on_Swing_area_entered"]
